# DeepViscosity

./: DeepViscosity_Predictor.ipynb  DeepViscsosity_train.ipynb  LICENSE  README.ko.md  README.md  deepviscosity_predictor.py  pyproject.toml  sequence_grouping.ipynb
DeepViscosity_ANN_ensemble_models/: ANN_dsp1.h5  ANN_dsp1.json  ANN_logo_0.h5  ANN_logo_1.h5  ANN_logo_1.json  ANN_logo_101.json  ANN_logo_11.h5  ANN_logo_12.h5  ANN_logo_12.json  ANN_logo_13.h5  ANN_logo_14.h5  ANN_logo_14.json  ANN_logo_15.json  ANN_logo_16.h5  ANN_logo_17.json  ANN_logo_19.h5  ANN_logo_19.json  ANN_logo_2.json  ANN_logo_20.h5  ANN_logo_21.h5  ANN_logo_22.h5  ANN_logo_22.json  ANN_logo_23.json  ANN_logo_24.json  ANN_logo_25.json  ANN_logo_26.h5  ANN_logo_26.json  ANN_logo_28.json  ANN_logo_29.h5  ANN_logo_3.h5  ANN_logo_31.h5  ANN_logo_31.json  ANN_logo_38.h5  ANN_logo_4.json  ANN_logo_40.h5  ANN_logo_41.h5  ANN_logo_44.h5  ANN_logo_45.h5  ANN_logo_45.json  ANN_logo_46.h5  (+263 more)
DeepViscosity_ANN_model/: ANN_model_2.h5  ANN_model_2.json
DeepViscosity_scaler/: DeepViscosity_scaler.joblib  DeepViscosity_scaler.save
data/DeepViscosity_ANN_ensemble_models/: ANN_logo_0.json  ANN_logo_10.h5  ANN_logo_10.json  ANN_logo_100.h5  ANN_logo_100.json  ANN_logo_101.h5  ANN_logo_11.json  ANN_logo_13.json  ANN_logo_15.h5  ANN_logo_16.json  ANN_logo_17.h5  ANN_logo_18.h5  ANN_logo_18.json  ANN_logo_2.h5  ANN_logo_20.json  ANN_logo_21.json  ANN_logo_23.h5  ANN_logo_24.h5  (+89 more)
notebooks/: DeepViscosity_Predictor.ipynb  DeepViscsosity_train.ipynb  sequence_grouping.ipynb
scripts/: deepviscosity_predictor.py
(+5 files in other folders)
