[project]
authors = [{ name = "deepthought", email = "deepthough@postech.ac.kr" }]
dependencies = []
name = "DeepViscosity"
requires-python = "==3.9.*"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
deepviscosity = { path = ".", editable = true }

[tool.pixi.tasks]
deepviscosity = "python -m deepviscosity.predict"


[tool.pixi.dependencies]
anarci = ">=2024.5.21,<2025"
keras = "==2.11.0"
tensorflow-cpu = ">=2.11.1,<3"
scikit-learn = ">=1.6.1,<2"
pandas = ">=2.3.0,<3"
numpy = "==1.26.4"
joblib = ">=1.5.1,<2"
dill = ">=0.4.0,<0.5"
click = ">=8.1.8,<9"
